# ot-realtek

./: .cppcheck_suppressions  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README  README.md  includepath.cmake
.github/: dependabot.yml
.github/workflows/: build.yml
Realtek/: after_build  build  build.sh  matter_after_build  matter_mtd_after_build  matter_ota_pack  openthread_after_build  post_build  pre_build  rcp_after_build  sdk.cmake
doc/otbr/text_cn/: README.rst
doc/otbr/text_en/: README.rst
doc/overview/text_cn/: README.rst
doc/overview/text_en/: README.rst
doc/release_notes/: change_logs.rst  major_changes.rst
doc/text_cn/: README.rst  SupportedFeatures.rst
doc/text_en/: README.rst  SupportedFeatures.rst
script/: build  matter_ota_pack  post_build  pre_build  sdk.cmake
src/: alarm.c  diag.c  logging.c  mac_802154_frame_parser.c  mac_802154_frame_parser.h  mac_frame_add.cpp  misc.c  radio.c
src/bee4/: CMakeLists.txt  bee4-mbedtls-config.h  board.h  crypto.c  dbg_printf.c  dbg_printf.h  example_vendor_hook.cpp  flash.c  logging.c  main_ns.c  ncp-arm-none-eabi.cmake  openthread-core-bee4-config.h  openthread-core-rtl8777g-rcp-config.h  otp_config.h  platform-bee.h  system.c  system_rtl.c  thread_task.c  uart.c  vendor_hook.h  version.h  xmodem.c  zb_main.c  zb_tst_cfg.h
src/bee4/common/: mac_driver_mpan.h  threading_alt.h
src/bee4/evb/: iot_persistent_config.h  mem_config.h
src/bee4/evb_dual/: mem_config.h
src/bee4/rtl8777g/: app.ld  flash_map.h  iot_persistent_config.h  mem_config.h
src/bee4/rtl8777g_dual/: app.ld
src/bee4/rtl8777g_test/: flash map.ini
tool/mpcli/: SPI_PIN_config.json  demo_serial.ini  mpcli  mptoolconfig.json  release_note.txt
